Cascading-jdbc Change Log

2.5.3 (unreleased)
- RedshiftScheme constructor is now accepting additional conditions

2.5.2
- upgrade redshift jdbc driver to 8.4-702.jdbc4
- reduce size of test jars
- replaceOnInsert support for MySQL
- more robust query discovery

2.5.1
- update to cascading 2.5.2
- fix issue in batch processing
- enable hadoop2-mr1 platform for the lingual providers

2.5.0
- Support for Cascading 2.5.x
- More robust batch processing
- More robust check if a table exists
- full support for SinkMode.UPDATE

2.2.0
- initial release of Cascading 2.2 compatible version