@@ -28,7 +28,6 @@ cascading.bind.provider.derby.factory.classname=cascading.jdbc.JDBCFactory
 # the protocol is jdbc
 cascading.bind.provider.derby.protocol.names=jdbc
 cascading.bind.provider.derby.protocol.jdbc.schemes=derby
-cascading.bind.provider.derby.protocol.jdbc.tableExistsQuery=__TABLE_EXISTS_QUERY_UNSUPPORTED__
 cascading.bind.provider.derby.protocol.jdbc.jdbcdriver=org.apache.derby.jdbc.ClientDriver
 cascading.bind.provider.derby.protocol.jdbc.tabledescseparator=:
 cascading.bind.provider.derby.protocol.jdbc.jdbcuser=
