@@ -27,7 +27,6 @@ cascading.bind.provider.h2.factory.classname=cascading.provider.JDBCFactory
 
 # the protocol is jdbc
 cascading.bind.provider.h2.protocol.names=jdbc
-cascading.bind.provider.h2.protocol.jdbc.tableExistsQuery=__TABLE_EXISTS_QUERY_UNSUPPORTED__
 cascading.bind.provider.h2.protocol.jdbc.schemes=h2
 cascading.bind.provider.h2.protocol.jdbc.jdbcdriver=org.h2.Driver
 cascading.bind.provider.h2.protocol.jdbc.tabledescseparator=:
