@@ -28,7 +28,6 @@ cascading.bind.provider.oracle.factory.classname=cascading.jdbc.OracleJDBCFactor
 # protocol is jdbc
 cascading.bind.provider.oracle.protocol.names=jdbc
 cascading.bind.provider.oracle.protocol.jdbc.schemes=oracle
-cascading.bind.provider.oracle.protocol.jdbc.tableExistsQuery=SELECT * FROM dba_tables WHERE UPPER(table_name) = UPPER('%s')
 cascading.bind.provider.oracle.protocol.jdbc.jdbcdriver=oracle.jdbc.OracleDriver
 cascading.bind.provider.oracle.protocol.jdbc.tabledescseparator=:
 cascading.bind.provider.oracle.protocol.jdbc.jdbcuser=
