@@ -28,7 +28,6 @@ cascading.bind.provider.postgresql.factory.classname=cascading.jdbc.JDBCFactory
 # protocol is jdbc
 cascading.bind.provider.postgresql.protocol.names=jdbc
 cascading.bind.provider.postgresql.protocol.jdbc.schemes=postgresql
-cascading.bind.provider.postgresql.protocol.jdbc.tableExistsQuery=SELECT * FROM pg_tables WHERE tablename='%s'
 cascading.bind.provider.postgresql.protocol.jdbc.jdbcdriver=org.postgresql.Driver
 cascading.bind.provider.postgresql.protocol.jdbc.tabledescseparator=:
 cascading.bind.provider.postgresql.protocol.jdbc.jdbcuser=
