@@ -30,7 +30,6 @@ cascading.bind.provider.redshift.factory.classname=cascading.jdbc.RedshiftFactor
 # define protocols differentiated by properties
 cascading.bind.provider.redshift.protocol.names=jdbc
 cascading.bind.provider.redshift.protocol.jdbc.schemes=postgresql
-cascading.bind.provider.postgresql.protocol.jdbc.tableExistsQuery=SELECT * FROM pg_tables WHERE tablename='%s'
 cascading.bind.provider.postgresql.protocol.jdbc.tabledescseparator=:
 cascading.bind.provider.postgresql.protocol.jdbc.tabledesc.tablename=
 cascading.bind.provider.postgresql.protocol.jdbc.tabledesc.columnnames=
